--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "types": [
+      "@types/styled-components-react-native"
+    ],
     "paths": {
       "@/*": ["./src/*"]
     }
