--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@vercel/analytics": "^0.1.11",
     "autoprefixer": "^9.8.8",
     "axios": "^1.3.4",
